--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Star Wars Theme Movie Database</title>
     <link rel="stylesheet" href="./stylesSW.css">
     <script src="https://kit.fontawesome.com/cc09b34362.js" crossorigin="anonymous"></script>
-    <script src="index.js" async></script>
+    <script src="index.js" defer></script>
     <link rel="icon" type="image/x-icon" href="./SWassets/darthvader.svg">
 </head>
  
