spelling error in about para

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
     <div class="about__container">
         <div class="row">
-            <h1 class="heading__about">HELLO, MY NAME IS JORDAN HOULE. I AM FRONTEND SOFTWARE ENGINEER WHO ENJOYS
+            <h1 class="heading__about">HELLO, MY NAME IS JORDAN HOULE. I AM A FRONTEND SOFTWARE ENGINEER WHO ENJOYS
                 WORKING WITH TEAMS TO TACKLE COMPLEX DEV PROBLEMS. BUILDING PROJECTS THAT POSITIVELY IMPACT USER
                 EXPERIENCE IS MY PASSION. IT ALSO DOESN'T HURT TO CHANGE THE WORLD. I HOPE YOU LIKE THIS SHORT STAR WARS
                 INSPIRED MOVIE DATABASE AS MUCH AS I'VE ENJOYED CREATING IT.<br><br>OFF TO NEW GALAXIES,<br><br>
